Change project domain from habit tracking to plant maintanance
